<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp"
    android:layout_height="match_parent"
    tools:context=".MainActivity">



       <EditText
           android:id="@+id/TvFirstName"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="10dp"
           android:textSize="25sp"
           android:hint="@string/firstname"/>

       <EditText
           android:id="@+id/TvLastName"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="10dp"
           android:textSize="25sp"
           android:hint="@string/lastname"/>

    <EditText
        android:id="@+id/TvEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="25sp"
        android:hint="@string/emailaddress"/>


    <EditText
        android:id="@+id/TvPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="25sp"
        android:hint="@string/phonenumber"/>




   <Button
       android:id="@+id/BtnSaveData"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="140dp"
       android:layout_gravity="center"
       android:text="@string/save_data"/>






</LinearLayout>